--- a/Predicting financial failure of Canadien's companies/Readme
+++ b/Predicting financial failure of Canadien's companies/Readme
@@ -1,1 +1,42 @@
+*This notebook demonstrates a  Panel dataset, including data exploration, feature engineering, model building, and evaluation.
+### Dataset Overview:
+* The dataset contains 13 columns and 2,570 entries. It includes various financial ratios, a "Classification" column (which is the dependent variable), and a "code" column that likely represents different companies.
+Data Types: Most columns are numerical, except for the "code" column, which is an object type
 
+*1- code: A unique identifier for each company or entity in the dataset.
+
+2-Classification: A classification indicator (likely binary, where 0 could represent one category and 1 another).
+
+3-Current Ratio: A liquidity ratio that measures a company’s ability to pay short-term obligations.
+
+4-Quick Ratio: A more stringent measure of liquidity than the current ratio, excluding inventories from current assets.
+
+5-Cash Ratio: The ratio of a company’s total cash and cash equivalents to its current liabilities.
+
+6-Operating Cash Flow Ratio: Measures how well current liabilities are covered by the cash flow from a company's operations.
+
+7-Working Capital Ratio: The ratio of a company's current assets to current liabilities.
+
+8-Return On Equity (ROE): Measures a corporation's profitability by revealing how much profit a company generates with the money shareholders have invested.
+
+9-Net Profit Margin: The percentage of revenue remaining after all expenses have been deducted from sales.
+
+10-EBITDA: Earnings Before Interest, Taxes, Depreciation, and Amortization.
+
+11-EV/EBITDA: The ratio of a company's enterprise value to its EBITDA, a valuation measure.
+
+12-EV / EBIT: The ratio of enterprise value to earnings before interest and taxes.
+
+13-EV / Free Cash Flow: Enterprise value divided by free cash flow, which shows how well a company generates cash relative to its valuation.
+
+14-EV / Invested Capital: The ratio of enterprise value to invested capital, which measures how well a company uses its capital.
+
+15-EV / Revenue: The enterprise value is divided by the company's revenue.
+
+16-P/E Ratio: Price-to-Earnings ratio, a valuation measure of a company’s current share price relative to its per-share earnings.
+
+17-Price/Book: The ratio of market value to book value of a company.
+
+18-Dividend Per Share: The total dividends paid per share over a period.
+
+19-Piotroski Score: A score that helps determine the financial strength of a company by evaluating nine criteria related to profitability, leverage, and efficiency.
