--- a/Predicting financial failure of Canadien's companies/Readme
+++ b/Predicting financial failure of Canadien's companies/Readme
@@ -1,42 +1,36 @@
-*This notebook demonstrates a  Panel dataset, including data exploration, feature engineering, model building, and evaluation.
-### Dataset Overview:
-* The dataset contains 13 columns and 2,570 entries. It includes various financial ratios, a "Classification" column (which is the dependent variable), and a "code" column that likely represents different companies.
-Data Types: Most columns are numerical, except for the "code" column, which is an object type
+📊 Financial Panel Dataset Analysis
+This notebook showcases an in-depth analysis of a financial panel dataset. We'll dive into data exploration, feature engineering, and even a bit of model building to extract key insights. The dataset includes critical financial ratios that provide a deep look into the financial health and performance of different companies.
 
-*1- code: A unique identifier for each company or entity in the dataset.
+🌟 Dataset Overview
+Entries: 2,570
+Columns: 13
+Key Features: Financial ratios and a classification label (0 or 1) for each company
+Unique Identifiers: The "code" column for different entities
+Target Variable: Classification – our dependent variable
+The majority of columns consist of numerical data, making this a great candidate for predictive modeling.
 
-2-Classification: A classification indicator (likely binary, where 0 could represent one category and 1 another).
-
-3-Current Ratio: A liquidity ratio that measures a company’s ability to pay short-term obligations.
-
-4-Quick Ratio: A more stringent measure of liquidity than the current ratio, excluding inventories from current assets.
-
-5-Cash Ratio: The ratio of a company’s total cash and cash equivalents to its current liabilities.
-
-6-Operating Cash Flow Ratio: Measures how well current liabilities are covered by the cash flow from a company's operations.
-
-7-Working Capital Ratio: The ratio of a company's current assets to current liabilities.
-
-8-Return On Equity (ROE): Measures a corporation's profitability by revealing how much profit a company generates with the money shareholders have invested.
-
-9-Net Profit Margin: The percentage of revenue remaining after all expenses have been deducted from sales.
-
-10-EBITDA: Earnings Before Interest, Taxes, Depreciation, and Amortization.
-
-11-EV/EBITDA: The ratio of a company's enterprise value to its EBITDA, a valuation measure.
-
-12-EV / EBIT: The ratio of enterprise value to earnings before interest and taxes.
-
-13-EV / Free Cash Flow: Enterprise value divided by free cash flow, which shows how well a company generates cash relative to its valuation.
-
-14-EV / Invested Capital: The ratio of enterprise value to invested capital, which measures how well a company uses its capital.
-
-15-EV / Revenue: The enterprise value is divided by the company's revenue.
-
-16-P/E Ratio: Price-to-Earnings ratio, a valuation measure of a company’s current share price relative to its per-share earnings.
-
-17-Price/Book: The ratio of market value to book value of a company.
-
-18-Dividend Per Share: The total dividends paid per share over a period.
-
-19-Piotroski Score: A score that helps determine the financial strength of a company by evaluating nine criteria related to profitability, leverage, and efficiency.
+🛠️ Key Features Explained
+code: A unique identifier for each company or entity.
+Classification: Binary variable (0 or 1) indicating categories, possibly financial health or sector.
+Current Ratio: A liquidity measure showing the ability to cover short-term obligations.
+Quick Ratio: A stricter liquidity measure, excluding inventory from assets.
+Cash Ratio: The ratio of cash and equivalents to current liabilities.
+Operating Cash Flow Ratio: Shows how well cash flow from operations covers liabilities.
+Working Capital Ratio: The ratio of current assets to current liabilities, reflecting liquidity.
+Return On Equity (ROE): Profitability measure showing how much profit a company generates with shareholders' investments.
+Net Profit Margin: The percentage of revenue left after all expenses are deducted.
+EBITDA: Earnings before Interest, Taxes, Depreciation, and Amortization.
+EV/EBITDA: Ratio of enterprise value (EV) to EBITDA, a valuation measure.
+EV / EBIT: Ratio of EV to earnings before interest and taxes.
+EV / Free Cash Flow: EV divided by free cash flow, indicating cash generation efficiency.
+EV / Invested Capital: EV to invested capital, reflecting how well a company uses its capital.
+EV / Revenue: EV divided by revenue, highlighting valuation relative to sales.
+P/E Ratio: Price-to-Earnings ratio, showing how much investors are paying per dollar of earnings.
+Price/Book: Ratio of market value to book value, indicating whether a stock is undervalued or overvalued.
+Dividend Per Share: Total dividends paid per share.
+Piotroski Score: A score evaluating financial strength based on profitability, leverage, and efficiency.
+🔍 What’s Next?
+Data Exploration: Identify patterns, trends, and relationships between features.
+Feature Engineering: Transform the data to extract new insights and improve model performance.
+Model Building: Create predictive models to classify companies based on financial ratios.
+Evaluation: Assess the models' performance with metrics like accuracy, precision, and recall.
