--- a/Predicting financial failure of Canadien's companies/.Readme.md
+++ b/Predicting financial failure of Canadien's companies/.Readme.md
@@ -26,7 +26,7 @@ This project demonstrates the use of a panel dataset to explore financial ratios
 - **Entries**: 2,570 records
 - **Columns**: 13 features
 - **Unique Identifier**: The `code` column represents different companies/entities.
-- **Target Variable**: `Classification` - a binary indicator (0 or 1) representing distinct categories for the companies (e.g., health status or performance category).
+- **Target Variable**: `Classification` - a binary indicator (0 or 1) representing distinct categories for the companies (fail or not).
 
 The dataset is rich with financial ratios that help assess liquidity, profitability, valuation, and efficiency of companies over time.
 
@@ -35,7 +35,7 @@ The dataset is rich with financial ratios that help assess liquidity, profitabil
 ## 🛠️ Key Features Explained
 
 - **code**: A unique identifier for each company or entity in the dataset.
-- **Classification**: Binary classification column representing categories (e.g., financial status, health, or sector classification).
+- **Classification**: Binary classification column representing categories of their failer.
 - **Current Ratio**: Measures a company's ability to pay short-term obligations.
 - **Quick Ratio**: A more stringent liquidity measure, excluding inventories from current assets.
 - **Cash Ratio**: The ratio of cash and equivalents to current liabilities, showing liquidity strength.
